--- a/main.css
+++ b/main.css
@@ -541,3 +541,92 @@ body {
 .sf-hidden {
     display: none !important;
 }
+/* hero background image */
+.bgimage {
+    height:100vh;
+    background: url('/home/kos/Desktop/vs-code/cyber.jpg');
+    background-size:cover;
+    position:relative;
+}
+/* text css above hero image*/
+.hero_title {
+    font-size: 4.5rem;
+}
+.hero_desc {
+    font-size: 2rem;
+}
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+/* about section image css */
+.imageAboutPage {
+    width: 100%;
+}
+/* skills section css */
+.skillsText {
+    height: 200px;
+    cursor: default;
+ }
+.certText {
+    height: 305px;
+    cursor: default;
+}
+.skillsIcon {
+    font-size: 36px;
+    text-align: center;
+    width: 100%;
+}
+.certIcon {
+    font-size: 36px;
+    text-align: center;
+    width: 100%;
+}
+.card-title {
+    text-align: center;
+}
+.card {
+  border-radius:15px;
+}
+.card:hover .skillsIcon {
+    color: #008000;
+}
+.skillsText:hover {
+    border: 1px solid #008000;
+}
+.certText:hover {
+    border: 1px solid #008000;
+}
+/* display background color black on navbar scroll */
+.navbarScroll.navbarDark {
+    background-color: black;
+}
+/* social media icons styling */
+.social-icons {
+    font-size: 36px;
+    cursor: pointer;
+}
+.fa-linkedin:hover, .fa-github:hover, .fa-book:hover {
+    color: #008000;
+}
+.fab, .fa {
+    color: #000000;
+}
+.footerlink {
+    color: black;
+    font-size: 18pt;
+    padding-left: 25px; 
+}
+i {
+    font-size: 28pt !important;
+    padding-left: 5px;
+}
+/* footer styling */
+#footer {
+    /*background-color: #808080; */
+    text-align: center;
+}
