--- a/extra.css
+++ b/extra.css
@@ -11,18 +11,18 @@
 
 .stars {
 	z-index: 0;
-	background: #000 url('https://i.imgur.com/YKY28eT.png') repeat top center;
+	background: #000 url('./images/stars.png') repeat top center;
 }
 
 .twinkling{
 	z-index: 1;
-	background:transparent url('https://i.imgur.com/XYMF4ca.png') repeat top center;
+	background:transparent url('./images/star.png') repeat top center;
 	animation: move-twink-back 200s linear infinite;
 }
 
 .clouds{
 	z-index: 2;
-    background:transparent url('https://i.imgur.com/mHbScrQ.png') repeat top center;
+    background:transparent url('./images/cloud.png') repeat top center;
 	animation: move-clouds-back 200s linear infinite;
 }
 
